--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HW#11</title>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+<body>
+
+
+  <form class="form">
+    <input type="text" name="search" class="form-input" placeholder="Search images..." />
+    <button type="submit" class="form-button">Search</button>
+    <div class="loader is-hidden"></div>
+  </form>
+
+  <ul class="gallery"></ul>
+
+  <script type="module" src="./main.js"></script>
+
 </html>
